syntax = "proto3";

// import "github.com/mwitkow/go-proto-validators/validator.proto";

package admin;
option go_package = "shgpu-table/grpc/admin";
import "google/protobuf/timestamp.proto";

service Admin {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc GetAdmin(GetAdminRequest) returns (GetAdminResponse) {}
  rpc AddAdvertisingMessage(AddAdvertisingMessageRequest) returns (AddAdvertisingMessageResponse) {}
  rpc RemoveAdvertisingMessage(RemoveAdvertisingMessageRequest) returns (RemoveAdvertisingMessageResponse) {}
  rpc ChangeAdvertisingMessage(ChangeAdvertisingMessageRequest) returns (ChangeAdvertisingMessageResponse) {}
  rpc GetAdvertisingMessages(GetAdvertisingMessagesRequest) returns (GetAdvertisingMessagesResponse) {}
  rpc GetAdvertisingMessage(GetAdvertisingMessageRequest) returns (GetAdvertisingMessageResponse) {}
}

message GetAdminRequest {
  string refreshToken = 1;
}

message GetAdminResponse {
  string name = 1;
  uint32 id = 5;
}

message Advertising {
  uint32 id = 1;
  repeated int32 faculties = 2;
  uint32 adminId = 3;
  string text = 4;
  uint32 totalCount = 5;
  google.protobuf.Timestamp sendDate = 6;
}

message AddAdvertisingMessageRequest {
  repeated int32 faculties = 1;
  uint32 adminId = 2;
  string text = 3;
  uint32 totalCount = 4;
  google.protobuf.Timestamp sendDate = 5;
}

message AddAdvertisingMessageResponse {
  uint32 id = 1;
  repeated int32 faculties = 2;
  uint32 adminId = 3;
  string text = 4;
  optional uint32 totalCount = 5;
  google.protobuf.Timestamp sendDate = 6;
}

message RemoveAdvertisingMessageRequest {
  uint32 advertisingId = 1;
}

message RemoveAdvertisingMessageResponse {
  uint32 removedCount = 1;
}

message ChangeAdvertisingMessageRequest {
  uint32 advertisingId = 1;
  repeated int32 faculties = 2;
  uint32 adminId = 3;
  string text = 4;
  uint32 totalCount = 5;
  google.protobuf.Timestamp sendDate = 6;
}

message ChangeAdvertisingMessageResponse {
  Advertising advertising = 1;
}

message GetAdvertisingMessagesRequest {
  uint32 adminId = 1;
}

message GetAdvertisingMessagesResponse{
  repeated Advertising advertisings = 1;
}

message GetAdvertisingMessageRequest {
  uint32 id = 1;
  uint32 adminId = 2;
}

message GetAdvertisingMessageResponse {
  Advertising advertising = 1;
}

message CreateRequest {
  string name = 1;
  string pass = 2;
}

message CreateResponse {
  string name = 1;
  string pass = 2;
  string refreshToken = 3;
  string accessToken = 4;
  uint32 id = 5;
  string error = 6;
}

message LoginRequest {
  string name = 1;
  string pass = 2;
}

message LoginResponse {
  string name = 1;
  uint32 id = 2;
  string refreshToken = 3;
  string accessToken = 4;
  string error = 6;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string refreshToken = 1;
  string accessToken = 2;
}

message LogoutRequest {
  string refreshToken = 1;
}

message LogoutResponse {}

message ValidateRequest {
  string accessToken = 1;
}
message ValidateResponse {
  uint32 id = 1;
  int64 expiresAt = 2;
  int64 issuedAt = 3;
}